mapstruct 사용 및 수정