@@ -8,34 +8,48 @@ import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Component;
 import org.springframework.data.domain.Slice;
 import java.util.List;
+import org.mapstruct.Mapper;
 
-@Component
-public class PageResponseMapper {
+@Mapper(componentModel = "spring")
+public interface PageResponseMapper {
 
-    public <E, T> PageResponse<T> fromPage(Page<E> page, Function<E, T> contentConverter) {
-        List<T> content = page.getContent().stream()
-            .map(contentConverter)
-            .collect(Collectors.toList());
-        return new PageResponse<>(
-            content,
-            page.getNumber(),
-            page.getSize(),
-            page.hasNext(),
-            page.getTotalElements()
-        );
+    default <E, T> PageResponse<T> fromPage(Page<E> page,
+        Function<E, T> converter) {
+
+        List<T> converted = page.stream()
+            .map(converter)
+            .toList();
+
+        Object nextCursor = page.hasNext()
+            ? page.getNumber() + 1      // 필요에 따라 Cursor 산식 변경
+            : null;
+
+        return PageResponse.<T>builder()
+            .content(converted)
+            .nextCursor(nextCursor)
+            .size(page.getSize())
+            .hasNext(page.hasNext())
+            .totalElements(page.getTotalElements())
+            .build();
     }
 
-    public <E, T> PageResponse<T> fromSlice(Slice<E> slice, Function<E, T> contentConverter) {
-        List<T> content = slice.getContent().stream()
-            .map(contentConverter)
-            .collect(Collectors.toList());
+    default <E, T> PageResponse<T> fromSlice(Slice<E> slice,
+        Function<E, T> converter) {
 
-        return new PageResponse<>(
-            content,
-            slice.getNumber(),
-            slice.getSize(),
-            slice.hasNext(),
-            null
-        );
+        List<T> converted = slice.stream()
+            .map(converter)
+            .toList();
+
+        Object nextCursor = slice.hasNext()
+            ? slice.getNumber() + 1
+            : null;
+
+        return PageResponse.<T>builder()
+            .content(converted)
+            .nextCursor(nextCursor)
+            .size(slice.getSize())
+            .hasNext(slice.hasNext())
+            .totalElements(null)
+            .build();
     }
 }
